# freebsd-ports-haskell

./: GIDs  UIDs
Mk/Uses/: cabal.mk
cardano-db-sync/: Makefile
comms/trustedqsl/: pkg-plist
converters/: Makefile
converters/hs-aeson-pretty/: Makefile
devel/elm-format/: Makefile
devel/hs-ShellCheck/: Makefile
devel/hs-cabal-install/: Makefile  distinfo
devel/hs-cpphs/: Makefile
devel/hs-darcs/: Makefile
devel/hs-ghcprofview/: Makefile  distinfo
devel/hs-git-brunch/: Makefile
devel/hs-hasktags/: Makefile
devel/hs-hlint/: Makefile
devel/hs-hoogle/: Makefile
devel/hs-mueval/: Makefile
devel/hs-ormolu/: Makefile  distinfo
devel/hs-profiteur/: Makefile
devel/hs-spago/: Makefile
devel/hs-threadscope/: Makefile
devel/stack/: Makefile  distinfo
games/hs-scroll/: Makefile
graphics/vulkan-extension-layer/: Makefile  distinfo
graphics/zint/: Makefile  pkg-descr
lang/: Makefile
lang/elm/: Makefile  distinfo
lang/ghc/: Makefile  distinfo  pkg-plist
lang/purescript/: Makefile  distinfo
math/hs-Agda/: Makefile  pkg-plist
math/hs-penrose/: Makefile
net-im/matterhorn/: Makefile  distinfo
net-im/matterhorn/files/: patch-matterhorn.cabal
net-p2p/: Makefile
net-p2p/cardano-db-sync/: Makefile  distinfo  pkg-descr  pkg-message  pkg-plist
net-p2p/cardano-node/: Makefile  distinfo  pkg-descr  pkg-plist
net-p2p/cardano-node/files/: cardano_node.in  patch-trace-resources_src_Cardano_Logging_Resources_Dummy.hs  patch-trace-resources_trace-resources.cabal
net-p2p/hs-ogmios/: Makefile
ogmios/: Makefile
(+21 files in other folders)
