--- trace-resources/trace-resources.cabal.orig	2021-12-20 17:50:47 UTC
+++ trace-resources/trace-resources.cabal
@@ -15,6 +15,7 @@ library
   hs-source-dirs:     src
   exposed-modules:    Cardano.Logging.Resources
                       Cardano.Logging.Resources.Types
+                      Cardano.Logging.Resources.Dummy
 
   default-language:   Haskell2010
   default-extensions: OverloadedStrings
